--- a/rtc.conf
+++ b/rtc.conf
@@ -1,5 +1,6 @@
 corba.nameservers: localhost:2809
 naming.formats: %h.host_cxt/%n.rtc
 logger.enable: NO
-
 exec_cxt.periodic.rate:20.0
+recognition.AppRecog.config_file: AppRecog.conf
+
